SERVER-79026 Make the JournalFlusher killable